Ingress/todo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: uzukwujp/todo:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-srv
spec:
  selector:
    app: todo
  ports:
    - name: todo
      protocol: TCP
      port: 3000
      targetPort: 4000
