Ingress/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: blogsite.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-srv
                port:
                  number: 3000
